# sofaros2plugin

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in  package.xml  ros2pluginConfig.cmake.in
scenes/: example.scn  liverPublisher.scn  liverSubscriber.scn  mstate_face_to_face.scn  mstate_translation.scn  rigid_translation.scn
src/ROS2Plugin/: DummyRigid.cpp  DummyRigid.h  DummyRigid.inl  DummyVec3d.cpp  DummyVec3d.h  DummyVec3d.inl  PosePublisher.cpp  PosePublisher.h  PosePublisher.inl  ROS2BaseObject.h  ROS2Context.cpp  ROS2Context.h  ROS2PointPublisher.cpp  ROS2PointPublisher.h  ROS2PointPublisher.inl  ROS2PointSubscriber.cpp  ROS2PointSubscriber.h  ROS2PointSubscriber.inl  ROS2PosePublisher.cpp  ROS2PosePublisher.h  ROS2PosePublisher.inl  ROS2PoseSubscriber.cpp  ROS2PoseSubscriber.h  ROS2PoseSubscriber.inl  ROS2Publisher.h  ROS2PublisherBase.h  ROS2PublisherNode.h  ROS2SubscriberBase.h  ROS2SubscriberNode.h  Vec3dPublisher.cpp  Vec3dPublisher.h  Vec3dPublisher.inl  config.h  initROS2Plugin.cpp  toolbox.h  types.h
src/ROS2Plugin/Publishers/: ROS2PointPublisher.cpp  ROS2PointPublisher.h  ROS2PointPublisher.inl  ROS2PosePublisher.cpp  ROS2PosePublisher.h  ROS2PosePublisher.inl  ROS2Publisher.cpp  ROS2Publisher.h  ROS2Publisher.inl  ROS2PublisherBase.h  ROS2PublisherNode.h
src/ROS2Plugin/Subscribers/: ROS2PointSubscriber.cpp  ROS2PointSubscriber.h  ROS2PointSubscriber.inl  ROS2PoseSubscriber.cpp  ROS2PoseSubscriber.h  ROS2PoseSubscriber.inl  ROS2Subscriber.cpp  ROS2Subscriber.h  ROS2Subscriber.inl  ROS2SubscriberBase.h  ROS2SubscriberNode.h
src/ros2plugin/: initROS2Plugin.cpp
src/ros2plugin/common/: EngineToTopology.cpp  EngineToTopology.h  EngineToTopology.inl  MessageArrayWrapper.h  MessageWrapper.h  ROS2BaseObject.h  ROS2Context.cpp  ROS2Context.h  Sequencer.cpp  Sequencer.h  Sequencer.inl  conversions.h  types.h
src/ros2plugin/publishers/: ROS2Publisher.cpp  ROS2Publisher.h  ROS2Publisher.inl  ROS2PublisherNode.h
src/ros2plugin/subscribers/: ROS2Subscriber.cpp  ROS2Subscriber.h  ROS2Subscriber.inl  ROS2SubscriberArray.cpp  ROS2SubscriberArray.h  ROS2SubscriberArray.inl  ROS2SubscriberImage.c++  ROS2SubscriberImage.cpp  ROS2SubscriberImage.h  ROS2SubscriberImage.h++  ROS2SubscriberImage.inl  ROS2SubscriberImage.inl++  ROS2SubscriberImageNode.h  ROS2SubscriberNode.h
