<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2plugin</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="hcourtecuisse@unistra.fr">Hadrien Courtecuisse</maintainer>
    <license>TODO: License declaration</license>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <!-- <depend>optitrack_msgs</depend> -->
    <depend>image_transport</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
